stderr
JudgeMan.java:38: error: missing return statement
    }
    ^
1 error
